Port to jdk 17